styles/tabs.less
@import "octicon-mixins";

.tabs {
  position: relative;
  display: flex;
  margin: 0;
  padding: 0;
  height: var(--bar-height);
  line-height: var(--bar-height);
  box-shadow: inset 0 -1px 0 var(--border);
  background-color: var(--app-bg);
  overflow-x: auto;
  overflow-y: hidden;
  list-style: none;
  -webkit-user-select: none;

  &::-webkit-scrollbar {
    display: none;
  }

  &:empty {
    display: none;
  }

  &-Tab {
    position: relative;
    flex: 1;
    max-width: 175px;
    min-width: 40px;
    color: var(--fg-subtle);
    text-align: center;
    box-shadow: inherit;
    border-left: 1px solid var(--border);
    transition: max-width .25s ease-in-out;
    -webkit-user-drag: element;

    &.active {
      color: var(--fg-strong);
      background-color: var(--bg);
      box-shadow: none;
    }

    &:first-of-type {
      border-left-color: transparent;
    }
    &:last-of-type {
      // use box-shadow to not take up any space
      box-shadow: inset 0 -1px 0 var(--border), 1px 0 0 var(--border);
    }
    &.active:last-of-type {
      box-shadow: 1px 0 0 var(--border);
    }

    &-title {
      overflow: hidden;
      white-space: pre;
      text-align: center;
      text-overflow: ellipsis;
      
      // When tab is pending
      &.is-pending {
        font-style: italic;
      }

      // When "Show Icons" is disabled in the settings
      &.has-hiddenIcon {
        &.icon:before {
          display: none;
        }
      }
    }

    

    // Close icon ----------------------

    &-closeIcon {
      --size: calc(var(--bar-height) ~'-' var(--spacer-2));

      .octicon(x, 16px);
      position: absolute;
      z-index: 2;
      top: var(--spacer-1);
      right: var(--spacer-1);
      width: var(--size);
      height: var(--size);
      line-height: var(--size);
      text-align: center;
      background-color: inherit;
      border-radius: var(--border-radius);
      overflow: hidden;
      transform: scale(0);
      transition: transform .08s;
      cursor: default;
      &:hover {
        color: var(--state-fg);
        background-color: var(--accent-bg);
      }
      &:active {
        background-color: var(--bg);
      }
      &::before {
        z-index: 1;
        font-size: calc(var(--bar-height) ~'-' var(--spacer-3));
        width: auto;
        height: auto;
        pointer-events: none;
      }
    }

    &:hover .tabs-Tab-closeIcon {
      transform: scale(1);
      transition-duration: .16s;
    }

    // Modified icon ----------------------

    &.is-modified {
      &:hover .tabs-Tab-closeIcon {
        color: var(--accent-fg);
        &:hover {
          color: var(--state-fg);
        }
      }
      &:not(:hover) .tabs-Tab-closeIcon {
        color: var(--accent-fg);
        transform: scale(1);
        &::before {
          content: "\f052";
        }
      }
    }
  }

  /* Drag and Drop */

  &-Tab.is-dragging {
    opacity: .5;

    .tabs-Tab-closeIcon,
    &:before {
      visibility: hidden;
    }
  }

  &-Placeholder {
    position: relative;
    top: 0;
    padding: 0;
    z-index: 999;
    list-style: none;
    height: inherit;
    pointer-events: none;

    // bar
    &:before {
      content: "";
      position: absolute;
      z-index: 1;
      margin: 0;
      width: 2px;
      height: inherit;
      background-color: var(--accent-fg);
    }

    // arrow
    &:after {
      content: "";
      position: absolute;
      z-index: 0;
      top: calc(var(--bar-height) ~'/' 2);
      margin: -4px 0 0 -3px;
      width: 4px;
      height: 4px;
      background: inherit;
      border: 4px solid var(--accent-fg);
      transform: rotate(45deg);
      background: transparent;
    }

    &:last-child {
      &:before {
        margin-left: -2px;
      }
      &:after {
        transform: none;
        margin-left: -10px;
        border-color: transparent var(--accent-fg) transparent transparent;
      }
    }
  }

  // Hidden ----------------------------
  // gets toggled by alwaysShowTabBar setting
  &.is-hidden {
    display: none;
  }

}

